fix: should hide scrollbar when viewer show

--- a/demo/index.less
+++ b/demo/index.less
@@ -5,7 +5,6 @@
 
 body {
   font-size: 16px;
-  overflow: hidden;
 }
 
 ul, li {
@@ -46,8 +45,7 @@ ul, li {
 }
 
 .container {
-  margin: 24 auto;
-  margin-top: 50px;
+  top: 50px;
   padding: 2em;
 }
 
